Fix issue with width of the Sign Up section on mobile device

--- a/src/Shark.Fido2.Sample.Blazor/Shark.Fido2.Sample.Blazor.Client/wwwroot/styles.css
+++ b/src/Shark.Fido2.Sample.Blazor/Shark.Fido2.Sample.Blazor.Client/wwwroot/styles.css
@@ -191,7 +191,9 @@ p {
     }
 
     .form-area {
-        flex: 1;
+        flex: 1 1 auto;
+        width: 100%;
+        max-width: none;
     }
 
     .form-container {
